--- a/assets/estilo/style.css
+++ b/assets/estilo/style.css
@@ -195,6 +195,9 @@ section#projects {
   width: 100%;
   padding: 5px 20px;
 }
+.logo {
+  width: 2em;
+}
 
 input, textarea, button {
   box-shadow: 0 1px 2px #ddd;
